--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
+      <div class="hamburger-menu icon-show">
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+        <div class="line line-3"></div>
+      </div>
+      <div class="side-nav">
+        <div class="side-nav-links">
+          <a href="#">Home</a>
+          <a href="#">Explore</a>
+          <a href="#">About</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </div>
+      </div>
       <div class="wrapper">
         <div class="logo">
           <img src="img/JTRAVEL-logo-white.png" alt="" />
