Add side nab bar on responsive

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <div class="hamburger-menu icon-show">
+      <div class="hamburger-menu">
         <div class="line line-1"></div>
         <div class="line line-2"></div>
         <div class="line line-3"></div>
