--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <!-- <link rel="icon" href="img/JTRAVEL-logo-white_.svg" /> -->
     <!-- <link rel="icon" href="img/JTRAVEL-logo-black 1.svg" /> -->
-    <link rel="icon" href="img/Group 1.svg" />
+    <link rel="icon" href="img/icon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
