--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         <p class="copyright">Designed and developed by Yumi Machino.</p>
       </footer>
     </div>
-
+    <!-- import swiperjs-->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
   </body>
