--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@YumiMachino" />
+    <meta property="og:url" content="https://yumimachino.github.io/JTRAVEL/" />
+    <meta property="og:title" content="JTRAVEL - Book a trip Now!" />
+    <meta
+      property="og:description"
+      content="Mockup landing page website designed and developed by YumiMachino."
+    />
+    <meta property="og:image" content="img/thumbnail.png" />
+    <meta
+      name="description"
+      content="A mockup landing page website designed and developed by YumiMachino."
+    />
+
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="img/icon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,7 +36,7 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
     />
-    <title>JTRAVEL</title>
+    <title>JTRAVEL - Book a trip Now!</title>
   </head>
   <body>
     <!-- Loader -->
