Add thumbnail for metadata

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       property="og:description"
       content="Mockup landing page website designed and developed by YumiMachino."
     />
-    <meta property="og:image" content="img/thumbnail.png" />
+    <meta
+      property="og:image"
+      content="https://user-images.githubusercontent.com/69213242/136122278-5d44bbc1-f539-46f6-8d0b-5da8dfe3b15c.png"
+    />
     <meta
       name="description"
       content="A mockup landing page website designed and developed by YumiMachino."
